force-app/main/default/objects/Loan_Setting_mdt__mdt/Loan_Setting_mdt__mdt.object-meta.xml
<CustomObject>
    <label>Loan Setting</label>
    <pluralLabel>Loan Setting</pluralLabel>
</CustomObject>