force-app/main/default/objects/Loan_Setting_mdt__mdt/fields/Default_After_Overdue_Count__c.field-meta.xml
<CustomField>
    <fullName>Default_After_Overdue_Count__c</fullName>
    <label>Default After Overdue Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>