force-app/main/default/objects/Loan_Setting_mdt__mdt/fields/Grace_Days__c.field-meta.xml
<CustomField>
    <fullName>Grace_Days__c</fullName>
    <label>Grace Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>