force-app/main/default/objects/Loan_Setting_mdt__mdt/fields/Late_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Percent__c</fullName>
    <label>Late Fee Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>