force-app/main/default/objects/Loan_Setting_mdt__mdt/fields/Max_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Max_Tenure_Months__c</fullName>
    <label>Max Tenure Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>